--- a/www/tecnico.html
+++ b/www/tecnico.html
@@ -102,6 +102,7 @@
     <script src='cordova.js'></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/push.js"></script>
   </body>
 </html>
