--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -29,7 +29,7 @@
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
             <li><a id="guardar" href="#" onclick="guardar()" class="navbar-link"><i class="fa fa-save text-md"> </i></a></li>
-            <li><a href="#" class="navbar-link"><i class="fa fa-paper-plane text-md"> </i></a></li>
+            <li><a href="#"  onclick="push('admin')" class="navbar-link"><i class="fa fa-paper-plane text-md"> </i></a></li>
             <li class="dropdown visible-sm visible-md visible-lg">
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
