--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -59,7 +59,8 @@
                   <div class="input-group">
                     <div class="input-group-addon">Modelo</div>
                     <input type="text" size="10" class="form-control" value="" id="model">
-                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
+                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">                               <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
+
                   </div>                  
                   <div class="input-group">
                     <div class="input-group-addon">Placa</div>
@@ -86,11 +87,11 @@
         </div>
       </div>
     </div>  
+    <script src='cordova.js'></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>  
     <script type="text/javascript" src="js/localstorage.js"></script>
-    <script src='cordova.js'></script>
     <script type="text/javascript">
         $(document).ready(function() {
             gridInspections();
