--- a/www/tecnico.html
+++ b/www/tecnico.html
@@ -9,7 +9,7 @@
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <h4 class="text-muted titulo text-center">Inspecciónes</h4>
+      <h4 class="text-muted titulo text-center">Inspecciones</h4>
       <div class="container-fluid">
         <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left text-md"></i></a>
         <div class="navbar-header">
