--- a/www/alta_cliente.html
+++ b/www/alta_cliente.html
@@ -23,19 +23,18 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
-            <li><a href="#" class="navbar-link"><i class="fa fa-car text-md"> </i></a></li>
-            <li><a href="#" class="navbar-link"><i class="fa fa-save text-md"> </i></a></li>
+            <li><a href="alta_vehiculo.html" class="navbar-link"><i class="fa fa-car text-md"> </i> Agregar automovil</a></li>
+            <li><a onclick="accion_cliente();" class="navbar-link"><i class="fa fa-save text-md"> </i> Guardar cliente</a></li>
             <li class="dropdown visible-sm visible-md visible-lg">
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
+
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
                 <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -60,15 +59,15 @@
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">Nombre</div>
-                    <input size="10" type="text" class="form-control" value="Jose Luis Gonzales Robles">
+                    <input name="name" id="name" size="10" type="text" class="form-control" value="" maxlength="200">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Email</div>
-                    <input size="10" type="text" class="form-control" value="3322332233">
+                    <input name="email" id="email" size="10" type="email" class="form-control" value="">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Celular</div>
-                    <input size="10" type="text" class="form-control" value="email@gmail.com">
+                    <input id="cellphone" name="cellphone" size="10" type="text" class="form-control" value="" maxlength="30">
                   </div>
                 </div>
               </form>
@@ -76,14 +75,15 @@
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">Password</div>
-                    <input size="10" type="text" class="form-control" value="Jose Luis Gonzales Robles">
+                    <input id="password" name="password" size="10" type="password" class="form-control" value="" maxlength="12" minlength="8" >
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Repetir Password</div>
-                    <input size="10" type="text" class="form-control" value="3322332233">
+                    <input name="password2" id="password2" size="10" type="password" class="form-control" value="" maxlength="12" minlength="8">
                   </div>
                 </div>
               </form>
+			        <div id="alertaCliente" class="text-center text-red"></div>
             </div>
             <div class="table-responsive">
               <table class="table table-striped default-table">
@@ -94,28 +94,7 @@
                     <th class="text-center"></th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
-                    <td class="text-left">Chevrolet Aveo JLK242</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-trash"> </i> </a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Chevrolet Aveo JLK242</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-trash"> </i> </a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Chevrolet Aveo JLK242</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-trash"> </i> </a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Chevrolet Aveo JLK242</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-trash"> </i> </a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                </tbody>
+                <tbody id="table_vehicle" name="table_vehicle"></tbody>
               </table>
             </div>
           </div>
@@ -124,4 +103,12 @@
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+  	<script type="text/javascript" src="js/localstorage.js"></script>
+  	<script type="text/javascript" src="js/main.js"></script>
+	  <script>
+		  $(document).ready(function() {
+		  	obtener_datos_cliente();
+		  });
+	  </script>
   </body>
