--- a/www/alta_vehiculo.html
+++ b/www/alta_vehiculo.html
@@ -23,19 +23,17 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
             <li><a href="#" class="navbar-link"><i class="fa fa-car text-md"> </i></a></li>
-            <li><a href="#" class="navbar-link"><i class="fa fa-save text-md"> </i></a></li>
+            <li><a onclick="accion_vehiculo();" class="navbar-link"><i class="fa fa-save text-md"> </i> Guardar</a></li>
             <li class="dropdown visible-sm visible-md visible-lg">
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
                 <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -60,15 +58,15 @@
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">Nombre</div>
-                    <input sise='5' type="text" class="form-control" value="Jose Luis Gonzales Robles">
+                    <input sise='5' type="text" class="form-control" value="" readonly name="name" id="name">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Email</div>
-                    <input sise='5' type="text" class="form-control" value="3322332233">
+                    <input sise='5' type="text" class="form-control" value="" readonly name="email" id="email">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Celular</div>
-                    <input sise='5' type="text" class="form-control" value="email@gmail.com">
+                    <input sise='5' type="text" class="form-control" value="" readonly name="cellphone" id="cellphone">
                   </div>
                 </div>
               </form>
@@ -77,11 +75,11 @@
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">Marca</div>
-                    <input type="text" size="10" class="form-control" value="Ford">
+                    <input type="text" size="10" class="form-control" value="" id="brand" name="brand">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Modelo</div>
-                    <input type="text" size="10" class="form-control" value="Fiesta">
+                    <input type="text" size="10" class="form-control" value="" name="model" id="model">
                   </div>
                 </div>
               </form>
@@ -89,19 +87,26 @@
                 <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">VIN</div>
-                    <input type="text" size="10" class="form-control" value="431242">
+                    <input type="text" size="10" class="form-control" value="" name="vin" id="vin">
                   </div>
                   <div class="input-group">
                     <div class="input-group-addon">Placa</div>
-                    <input type="text" size="10" class="form-control" value="JLK242">
+                    <input type="text" size="10" class="form-control" value="" name="license_plate" id="license_plate">
                   </div>
                 </div>
               </form>
             </div>
+			  <div id="alerta" class="text-center text-red"></div>
           </div>
         </div>
       </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+	<script type="text/javascript" src="js/localstorage.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	  <script>
+		  obtener_datos_vehiculo();
+	  </script>
   </body>
