--- a/www/cliente_detalle.html
+++ b/www/cliente_detalle.html
@@ -9,9 +9,9 @@
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <h4 class="text-muted titulo text-center">Inspecciones</h4>
+      <h4 class="text-muted titulo text-center">Clientes</h4>
       <div class="container-fluid">
-        <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left text-md"></i></a>
+        <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left"></i></a>
         <div class="navbar-header">
           <button type="button" class="navbar-link navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -26,15 +26,18 @@
             <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="cliente_detalle.html" class="navbar-link">Clientes</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="cliente_detalle.html" class="navbar-link">Clientes detall</a></li>
+			<li><a href="alta_cliente.html" class="navbar-link"><i class="fa fa-plus-circle"></i> Agregar cliente</a></li>
             <li class="dropdown visible-sm visible-md visible-lg">
-              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
+              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"> </i></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
                 <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-                <li><a href="cliente_detalle.html" class="navbar-link">Clientes</a></li>
+                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
+                <li><a href="cliente_detalle.html" class="navbar-link">Cliente detalle</a></li>
               </ul>
             </li>
           </ul>
@@ -51,57 +54,43 @@
         <div class="col-xs-12">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <div class="input-group col-xs-12">
-                <form class="form-inline my-form">
-                  <div class="form-group">
-                    <div class="input-group">
-                      <input type="text" class="form-control" id="exampleInputAmount" placeholder="Buscar">
-                      <a class="input-group-addon btn btn-search link">
-                        <i class="fa fa-search "> </i>
-                      </a>
-                    </div>
-                  </div>
-                  <a onclick="location.href='nueva_inspeccion.html';" class="btn btn-primary pull-right"><i class="fa fa-plus"> </i> Agregar</a>
-                </form>
+              <div class="input-group col-xs-6">
+                <input type="text" class="form-control" id="cliente" placeholder="Buscar">
+                <a class="input-group-addon btn btn-search link" onclick="obtenerclients();">
+                  <i class="fa fa-search "> </i>
+                </a>
               </div>
+              <div class="input-group col-xs-6"></div>
             </div>
             <div class="table-responsive">
               <table class="table table-striped default-table">
-                <thead>
-                  <tr>
-                    <th class="text-left">Nombre</th>
-                    <th class="text-center">Estatus</th>
-                    <th class="text-center">Modificar</th>
-                  </tr>
+                <thead class="margin-0">
+                    <tr id="model">
+                       
+                    </tr>
                 </thead>
-               <!-- <tbody>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-search"> </i> En revision</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-clock-o "> </i> Espera cliente</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-comments-o "> </i> Respondido</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                </tbody> -->
+                <tbody id="table-clients-users"></tbody>
               </table>
+				      <div id="alertaCliente" class="text-center text-red"></div>
             </div>
+            <div class="panel-footer"></div>
           </div>
         </div>
       </div>
     </div>
-    <script src='cordova.js'></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/detalle.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/push.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+    
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            gridDetalleInspeccion();
+        });
+
+     </script>
   </body>
-</html>
