--- a/www/nueva_inspeccion.html
+++ b/www/nueva_inspeccion.html
@@ -23,8 +23,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -32,11 +31,10 @@
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
+                <li><a href="cliente_detalle.html" class="navbar-link">Clientes</a></li>
               </ul>
             </li>
           </ul>
@@ -60,9 +58,9 @@
                       <input type="text" class="form-control" id="cliente" placeholder="Buscar">
                       <a class="input-group-addon btn btn-search link" onclick="gridClientes();">
                         <i class="fa fa-search "> </i>
-                      </a> 
+                      </a>
                     </div>
-                  </div>                  
+                  </div>
                 </form>
               </div>
             </div>
@@ -78,7 +76,7 @@
                   </tr>
                 </thead>
                 <tbody id="table-clients"></tbody>
-                  
+
                 <!-- <tbody>
                   <tr>
                     <td class="text-left">Jose Luis Gonzalez Robles</td>
@@ -117,9 +115,9 @@
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
-  
+    <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             gridClientes();
