--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
+
+        <link rel="stylesheet" href="css/resumable.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -23,8 +25,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -34,8 +35,7 @@
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
                 <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -54,19 +54,19 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="panel panel-default">
-            <div class="panel-heading">                            
-                <div class="form-group">                  
+            <div class="panel-heading">
+                <div class="form-group">
                   <div class="input-group">
                     <div class="input-group-addon">Modelo</div>
                     <input type="text" size="10" class="form-control" value="" id="model">
-                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">                               <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
-
-                  </div>                  
+                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
+                    <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
+                  </div>
                   <div class="input-group">
                     <div class="input-group-addon">Placa</div>
                     <input type="text" size="10" class="form-control" value="" id="license_plate">
                   </div>
-                </div>            
+                </div>
             </div>
             <div class="table-responsive">
               <table class="table table-striped default-table">
@@ -79,19 +79,48 @@
                     <th class="text-center">Ver</th>
                   </tr>
                 </thead>
-                <tbody id='table-inspections'>                
+                <tbody id='table-inspections'>
                 </tbody>
+                <tfooter>
+                  <tr>
+                    <tr colspan="5">
+                      <div id="frame">
+                        <div class="resumable-drop" ondragenter="jQuery(this).addClass('resumable-dragover');" ondragend="jQuery(this).removeClass('resumable-dragover');" ondrop="jQuery(this).removeClass('resumable-dragover');">
+                          Drop video files here to upload or <a class="resumable-browse"><u>select from your computer</u></a>
+                        </div>
+                        <div class="resumable-progress">
+                          <table>
+                            <tr>
+                              <td width="100%"><div class="progress-container"><div class="progress-bar"></div></div></td>
+                              <td class="progress-text" nowrap="nowrap"></td>
+                              <td class="progress-pause" nowrap="nowrap">
+                                <a href="#" onclick="r.upload(); return(false);" class="progress-resume-link"><img src="img/resume.png" title="Resume upload" /></a>
+                                <a href="#" onclick="r.pause(); return(false);" class="progress-pause-link"><img src="img/pause.png" title="Pause upload" /></a>
+                                <a href="#" onclick="r.cancel(); return(false);" class="progress-cancel-link"><img src="img/cancel.png" title="Cancel upload" /></a>
+                              </td>
+                            </tr>
+                          </table>
+                        </div>
+                        <ul class="resumable-list"></ul>
+                      </div>
+                    </tr>
+                  </tr>
+                </tfooter>
               </table>
             </div>
           </div>
         </div>
+        <div id="videoArea" style="border:1px solid red; width:100%;"></div>
       </div>
-    </div>  
-    <script src='cordova.js'></script>
+    </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>  
+    <script type="text/javascript" src="js/resumable.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
+    <script type="text/javascript" src="js/capture_uploader.js"></script>
+    <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>
+    <script src='cordova.js'></script>
     <script type="text/javascript">
         $(document).ready(function() {
             gridInspections();
