--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -110,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div id="videoArea" style="border:1px solid red; width:100%;"></div>
+        <div id="status"></div>
       </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
