--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -11,7 +11,7 @@
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <h4 class="text-muted titulo text-center">Inspecciónar</h4>
+      <h4 class="text-muted titulo text-center">Inspeccionar</h4>
       <div class="container-fluid">
         <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left text-md"></i></a>
         <div class="navbar-header">
