--- a/www/index.html
+++ b/www/index.html
@@ -22,22 +22,20 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-user"> </i></span>
-                                <input type="email" id="email" class="form-control" placeholder="Usuario"
-                                value="admin@admin.com">
+                                <input type="email" id="email" class="form-control" placeholder="Usuario">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-lock"> </i></span>
-                                <input type="password" id="password" class="form-control" placeholder="Contraseña"
-                                value="12345678">
+                                <input type="password" id="password" class="form-control" placeholder="Contraseña">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="fa fa-key"> </i></span>
-                                <input type="token" id="token" class="form-control" placeholder="Token"
-                                value="5vdkp">
+                                <input type="token" id="token" class="form-control" placeholder="Token">
+                                <input type="token" id="token" class="form-control" placeholder="Token" value="n3mn2">
                             </div>
                         </div>
                         <a class="pull-right btn btn-primary mt-4" onclick="ingresar();"><i class="fa fa-sign-in"> </i> Ingresar</a>
