--- a/www/realizar_inspeccion.html
+++ b/www/realizar_inspeccion.html
@@ -19,6 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
@@ -46,7 +47,7 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
         </div>
       </div>
       <div class="row">
