--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -21,26 +21,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a href="resultado_inspeccion.html"  onclick="push('admin')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
+		  <a id="guardar" href="#" onclick="guardar()" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
+		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
-            <li><a id="guardar" href="#" onclick="guardar()" class="navbar-link"><i class="fa fa-save text-md"> </i></a></li>
-            <li><a href="#"  onclick="push('admin')" class="navbar-link"><i class="fa fa-paper-plane text-md"> </i></a></li>
-            <li class="dropdown visible-sm visible-md visible-lg">
-              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
-              <ul class="dropdown-menu">
-                <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
-                <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
-                <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
-              </ul>
-            </li>
+          <ul id="menudinamico" name="menudinamico" class="nav navbar-nav navbar-right">
+          </ul>
+		  <ul id="menudefault" name="menudefault" class="nav navbar-nav navbar-right">     
           </ul>
         </div>
       </div>
@@ -48,7 +36,7 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
         </div>
       </div>
       <div class="row">
@@ -73,18 +61,7 @@
               <table class="table table-striped default-table">
                 <thead>
                   <tr>
-                    <th class="text-center">Severidad</th>
-                    <th class="text-left">Inspecci&oacute;n</th>
-                    <th class="text-center">Multimedia</th>
-                    <th class="text-center">Audio</th>
-                    <th class="text-center">Ver</th>
-                  </tr>
-                </thead>
-                <tbody id='table-inspections'>
-                </tbody>
-                <tfooter>
-                  <tr>
-                    <tr colspan="5">
+                    <td colspan="5">
                       <div id="frame">
                         <div class="resumable-drop" ondragenter="jQuery(this).addClass('resumable-dragover');" ondragend="jQuery(this).removeClass('resumable-dragover');" ondrop="jQuery(this).removeClass('resumable-dragover');">
                           Drop video files here to upload or <a class="resumable-browse"><u>select from your computer</u></a>
@@ -104,9 +81,18 @@
                         </div>
                         <ul class="resumable-list"></ul>
                       </div>
-                    </tr>
+                    </td>
                   </tr>
-                </tfooter>
+                  <tr>
+                    <th class="text-center">Severidad</th>
+                    <th class="text-left">Inspecci&oacute;n</th>
+                    <th class="text-center">Multimedia</th>
+                    <th class="text-center">Audio</th>
+                    <th class="text-center">Ver</th>
+                  </tr>
+                </thead>
+                <tbody id='table-inspections'>
+                </tbody>
               </table>
             </div>
           </div>
@@ -120,10 +106,12 @@
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/capture_uploader.js"></script>
     <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
     <script src='cordova.js'></script>
     <script type="text/javascript">
         $(document).ready(function() {
             gridInspections();
+			menu(0,0);
         });
      </script>
   </body>
