--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="resultado_inspeccion.html"  onclick="push('admin')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
+          <a href="resultado_inspeccion.html"  onclick="push('Asesor')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
 		  <a id="guardar" href="#" onclick="guardar()" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
 		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
